# lois_kinematics

kinematics/: CMakeLists.txt  package.xml
kinematics/include/kinematics/: model.hpp  pose.hpp
kinematics/include/kinematics/models/: model_differential.hpp
kinematics/src/: pose.cpp
